Fix register and login button spacing

--- a/application/static/css/general.css
+++ b/application/static/css/general.css
@@ -40,6 +40,7 @@ section {
     height: 50px;
     line-height: 50px;
     border-bottom: 1px solid #bbb;
+    position:absolute;
 }
 
 .bar button {
